<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/setting_frameLayout_news"
                style="@style/setting_frameLayout_2"
                android:layout_marginTop="14dp"
                android:background="@drawable/item_top_bg_selector" >

                <TextView
                    style="@style/setting_mianText"
                    android:text="@string/setting_news" />

                <ImageView style="@style/setting_imageIcon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/setting_frameLayout_privacy"
                style="@style/setting_frameLayout_2"
                android:background="@drawable/item_middle_bg_selector" >

                <TextView
                    style="@style/setting_mianText"
                    android:text="@string/setting_privacy" />

                <ImageView style="@style/setting_imageIcon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/setting_frameLayout_blacklist"
                style="@style/setting_frameLayout_2"
                android:background="@drawable/item_bottom_bg_selector" >

                <TextView
                    style="@style/setting_mianText"
                    android:text="@string/setting_blacklist" />

                <ImageView style="@style/setting_imageIcon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/setting_frameLayout_shareToRenRen"
                style="@style/setting_frameLayout_1"
                android:layout_marginTop="14dp"
                android:background="@drawable/item_single_bg_selector" >

                <TextView
                    style="@style/setting_mianText"
                    android:text="@string/setting_share" />

                <ImageView style="@style/setting_imageIcon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/setting_frameLayout_features"
                style="@style/setting_frameLayout_2"
                android:layout_marginTop="14dp"
                android:background="@drawable/item_top_bg_selector" >

                <TextView
                    style="@style/setting_mianText"
                    android:text="@string/setting_features" />

                <ImageView style="@style/setting_imageIcon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/setting_frameLayout_about"
                style="@style/setting_frameLayout_2"
                android:background="@drawable/item_middle_bg_selector" >

                <TextView
                    style="@style/setting_mianText"
                    android:text="@string/setting_about" />

                <ImageView style="@style/setting_imageIcon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/setting_frameLayout_feedback"
                style="@style/setting_frameLayout_2"
                android:background="@drawable/item_middle_bg_selector" >

                <TextView
                    style="@style/setting_mianText"
                    android:text="@string/setting_feedback" />

                <ImageView style="@style/setting_imageIcon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/setting_frameLayout_evaluate"
                style="@style/setting_frameLayout_2"
                android:background="@drawable/item_middle_bg_selector" >

                <TextView
                    style="@style/setting_mianText"
                    android:text="@string/setting_evaluate" />

                <ImageView style="@style/setting_imageIcon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/setting_frameLayout_clear"
                style="@style/setting_frameLayout_1"
                android:layout_marginTop="14dp"
                android:background="@drawable/item_single_bg_selector" >

                <TextView
                    style="@style/setting_mianText"
                    android:text="@string/setting_clear" />

                <ImageView style="@style/setting_imageIcon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/test"
                style="@style/setting_frameLayout_1"
                android:layout_marginTop="14dp"
                android:background="@drawable/item_single_bg_selector" >

                <TextView
                    style="@style/setting_mianText"
                    android:text="接口测试" />

                <ImageView style="@style/setting_imageIcon" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/setting_frameLayout_logout"
                style="@style/setting_frameLayout_1"
                android:layout_marginTop="14dp"
                android:background="@drawable/setting_btn_selector" >

                <TextView
                    style="@style/T15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/setting_logout" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="74dp" >
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <!--
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="4dip"
        android:scaleType="fitXY"
        android:src="@drawable/common_title_driver" />
    -->

</FrameLayout>